fix mobile horizontal scroll bug

--- a/src/components/layout.module.scss
+++ b/src/components/layout.module.scss
@@ -14,3 +14,9 @@ body {
   margin: 0 auto;
   font-family: Montserrat, sans-serif;
 }
+
+@media (max-width: 576px) {
+  body {
+    max-width: 90%;
+  }
+}
